# instagram-private-api

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  posts-w-comments-disabled.txt
doc/html/: Api_8h_source.html  Constants_8h_source.html  Device_8h_source.html  HuaweiMate9Pro_8h_source.html  LgG5_8h_source.html  Messages_8h_source.html  OnePlus3T_8h_source.html  OnePlus7_8h_source.html  SamsungGalaxyS7Edge_8h_source.html  SamsungGalaxyS7_8h_source.html  SamsungGalaxyS9Plus_8h_source.html  ZteAxon7_8h_source.html  annotated.html  classes.html  classig_1_1Api-members.html  classig_1_1Api.html  classig_1_1Device-members.html  classig_1_1Device.html  classig_1_1Device__inherit__graph.map  classig_1_1Device__inherit__graph.md5  classig_1_1HuaweiMate9Pro-members.html  classig_1_1HuaweiMate9Pro.html  classig_1_1HuaweiMate9Pro__inherit__graph.map  classig_1_1HuaweiMate9Pro__inherit__graph.md5  classig_1_1LgG5-members.html  classig_1_1LgG5.html  classig_1_1LgG5__coll__graph.map  classig_1_1LgG5__inherit__graph.md5  classig_1_1Messages-members.html  classig_1_1Messages.html  classig_1_1OnePlus3T-members.html  classig_1_1OnePlus3T.html  classig_1_1OnePlus3T__coll__graph.md5  classig_1_1OnePlus3T__inherit__graph.map  classig_1_1OnePlus7-members.html  classig_1_1OnePlus7.html  classig_1_1OnePlus7__coll__graph.map  classig_1_1OnePlus7__inherit__graph.md5  classig_1_1SamsungGalaxyS7-members.html  classig_1_1SamsungGalaxyS7.html  (+43 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+22 more)
doc/latex/: annotated.tex  classig_1_1Api.tex  classig_1_1Device.tex  classig_1_1Device__inherit__graph.md5  classig_1_1HuaweiMate9Pro.tex  classig_1_1HuaweiMate9Pro__inherit__graph.md5  classig_1_1LgG5.tex  classig_1_1LgG5__coll__graph.md5  classig_1_1Messages.tex  classig_1_1OnePlus3T.tex  classig_1_1OnePlus3T__inherit__graph.md5  classig_1_1OnePlus7.tex  classig_1_1OnePlus7__coll__graph.md5  classig_1_1SamsungGalaxyS7.tex  classig_1_1SamsungGalaxyS7Edge.tex  classig_1_1SamsungGalaxyS7Edge__inherit__graph.md5  classig_1_1SamsungGalaxyS7__coll__graph.md5  classig_1_1SamsungGalaxyS9Plus.tex  classig_1_1SamsungGalaxyS9Plus__coll__graph.md5  classig_1_1ZteAxon7.tex  classig_1_1ZteAxon7__coll__graph.md5  hierarchy.tex  index.tex  md_README.tex  refman.tex  structig_1_1Constants.tex
include/ig/: Api.h  Constants.h  SpecialTools.h  TooManyRequestsException.h
include/ig/constants/: Constants.h  Messages.h
include/ig/devices/: Device.h  HuaweiMate9Pro.h  LgG5.h  OnePlus3T.h  OnePlus7.h  SamsungGalaxyS7.h  SamsungGalaxyS7Edge.h  SamsungGalaxyS9Plus.h  ZteAxon7.h
po/: messages.pot
scripts/: mk-pot.sh
src/: Api.cpp  Constants.cpp  Endpoints.cpp  SpecialTools.cpp  TooManyRequestsException.cpp  main.cpp
src/constants/: Constants.cpp  Messages.cpp
src/devices/: Device.cpp  HuaweiMate9Pro.cpp  LgG5.cpp  OnePlus3T.cpp  OnePlus7.cpp  SamsungGalaxyS7.cpp  SamsungGalaxyS7Edge.cpp  SamsungGalaxyS9Plus.cpp  ZteAxon7.cpp  one_plus_7.cpp
